con cambios agregdos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HOLA MUNDO</title>
 </head>
 <body>
-    <P>Hola estudiantes este es mi sitio web sigueme para mas</P>
+    <P>Hola estudiantes este es mi sitio web sigueme para mas
+
+    </P>
+    <h1>Esta es una prueba para subir a github</h1>
 </body>
 </html>
